--- a/Excel2PDFReports/angular.json
+++ b/Excel2PDFReports/angular.json
@@ -52,6 +52,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
@@ -67,11 +73,12 @@
               "outputHashing": "all"
             },
             "development": {
+              "fileReplacements": [],
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
             }
-          },
+          },          
           "defaultConfiguration": "production"
         },
         "serve": {
