--- a/Excel2PDFReports/package.json
+++ b/Excel2PDFReports/package.json
@@ -16,14 +16,18 @@
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
+    "@angular/material": "^19.1.0",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.6",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
