--- a/Excel2PDFReports/package.json
+++ b/Excel2PDFReports/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "ng-apexcharts": "^1.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
